# Expressions

./: CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: tests.yml
cmake/: ExpressionsConfig.cmake.in
lib/headers/: expression.hpp  expression_result.hpp
lib/headers/expressions/: container.hpp  result.hpp
lib/sources/: container.cpp  expression.cpp  expression_result.cpp  result.cpp
tests/: expression_test.cc  implementation_test.cc
