CMAKE_MINIMUM_REQUIRED(VERSION 3.25)
PROJECT(Expressions VERSION 1.0.0 LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD 23)
SET(CMAKE_CXX_STANDARD_REQUIRED True)

OPTION(BUILD_TESTS "Build tests" OFF)

INCLUDE(FetchContent)

INCLUDE_DIRECTORIES(lib/headers)

FILE(GLOB_RECURSE SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/lib/sources/*.cpp")
file(GLOB_RECURSE TESTS CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/tests/*.cc")

ADD_LIBRARY(expressions STATIC ${SOURCES})

TARGET_INCLUDE_DIRECTORIES(expressions PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/lib/headers)

INSTALL(TARGETS expressions DESTINATION lib)
INSTALL(DIRECTORY lib/headers/ DESTINATION include)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)

if (BUILD_TESTS)
    FETCHCONTENT_DECLARE(
            googletest
            URL https://github.com/google/googletest/archive/b514bdc898e2951020cbdca1304b75f5950d1f59.zip
    )
    SET(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
    FETCHCONTENT_MAKEAVAILABLE(googletest)
    ENABLE_TESTING()
    ADD_EXECUTABLE(tests ${TESTS} ${SOURCES})
    TARGET_LINK_LIBRARIES(tests GTest::gtest_main)
    INCLUDE(GoogleTest)
    GTEST_DISCOVER_TESTS(tests)
endif()

